// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`convertSnootyAstToMdast - node snapshots | admonition note 1`] = `
"<Admonition name="note">
  Note text
</Admonition>"
`;

exports[`convertSnootyAstToMdast - node snapshots | blockquote 1`] = `"> quote"`;

exports[`convertSnootyAstToMdast - node snapshots | bullet_list 1`] = `"* Item"`;

exports[`convertSnootyAstToMdast - node snapshots | card-group 1`] = `
"<CardGroup cols={3}>
  Card
</CardGroup>"
`;

exports[`convertSnootyAstToMdast - node snapshots | code block 1`] = `
"\`\`\`js
console.log("hi")
\`\`\`"
`;

exports[`convertSnootyAstToMdast - node snapshots | comment node skipped 1`] = `""`;

exports[`convertSnootyAstToMdast - node snapshots | comment_block node skipped 1`] = `""`;

exports[`convertSnootyAstToMdast - node snapshots | cta-banner 1`] = `
"<CTABanner color="green">
  CTA
</CTABanner>"
`;

exports[`convertSnootyAstToMdast - node snapshots | definition list 1`] = `
"<DefinitionList>
  <DefinitionListItem>
    Term

    Definition
  </DefinitionListItem>
</DefinitionList>"
`;

exports[`convertSnootyAstToMdast - node snapshots | directive cond 1`] = `
"<Cond expr="env==&#x22;production&#x22;">
  Conditional
</Cond>"
`;

exports[`convertSnootyAstToMdast - node snapshots | directive figure 1`] = `"<Image src="/images/figure.png" />"`;

exports[`convertSnootyAstToMdast - node snapshots | directive image 1`] = `"<Image src="/images/test.png" />"`;

exports[`convertSnootyAstToMdast - node snapshots | directive include 1`] = `"<Include src="/included-file" />"`;

exports[`convertSnootyAstToMdast - node snapshots | directive list-table 1`] = `
"| Version | client 1.0 | client 2.0 |
| ------- | ---------- | ---------- |
| DB 7.0  | ✓          | ✓          |
| DB 8.0  | ✓          | -          |"
`;

exports[`convertSnootyAstToMdast - node snapshots | directive literalinclude 1`] = `
"\`\`\`js
// Source: src/code.js
// TODO: Content from external file not available during conversion
\`\`\`"
`;

exports[`convertSnootyAstToMdast - node snapshots | directive sharedinclude 1`] = `"<Include src="/shared-file" />"`;

exports[`convertSnootyAstToMdast - node snapshots | directive_argument node 1`] = `"Arg text"`;

exports[`convertSnootyAstToMdast - node snapshots | doc link 1`] = `"<Reference name="/docs/page" />"`;

exports[`convertSnootyAstToMdast - node snapshots | emphasis 1`] = `"*em*"`;

exports[`convertSnootyAstToMdast - node snapshots | enumerated_list 1`] = `"5. Five"`;

exports[`convertSnootyAstToMdast - node snapshots | field list 1`] = `
"<FieldList>
  <Field name="foo" label="Foo">
    Field content
  </Field>
</FieldList>"
`;

exports[`convertSnootyAstToMdast - node snapshots | footnote definition and reference 1`] = `
"See note[^1]

[^1]: Footnote text"
`;

exports[`convertSnootyAstToMdast - node snapshots | generic ordered list 1`] = `"3. Third"`;

exports[`convertSnootyAstToMdast - node snapshots | heading 1`] = `
"<Heading>
  Heading
</Heading>"
`;

exports[`convertSnootyAstToMdast - node snapshots | hidden directive (toctree) 1`] = `""`;

exports[`convertSnootyAstToMdast - node snapshots | inline literal → inline code 1`] = `"\`code\`"`;

exports[`convertSnootyAstToMdast - node snapshots | inline_target 1`] = `"<span id="inline-id" />"`;

exports[`convertSnootyAstToMdast - node snapshots | line block 1`] = `
"First line\\
Second line"
`;

exports[`convertSnootyAstToMdast - node snapshots | link reference 1`] = `"[link](https://example.com)"`;

exports[`convertSnootyAstToMdast - node snapshots | method-selector 1`] = `
"<MethodSelector>
  Methods
</MethodSelector>"
`;

exports[`convertSnootyAstToMdast - node snapshots | named_reference node 1`] = `""`;

exports[`convertSnootyAstToMdast - node snapshots | only directive 1`] = `
"<Only expr="target == &#x22;mytarget&#x22;">
  Only content
</Only>"
`;

exports[`convertSnootyAstToMdast - node snapshots | ordered_list 1`] = `"1. First"`;

exports[`convertSnootyAstToMdast - node snapshots | paragraph 1`] = `"Hello world"`;

exports[`convertSnootyAstToMdast - node snapshots | ref_role link 1`] = `"<Reference name="/ref/link" />"`;

exports[`convertSnootyAstToMdast - node snapshots | role abbr 1`] = `"<Abbr>abbr</Abbr>"`;

exports[`convertSnootyAstToMdast - node snapshots | section with title 1`] = `
"<Section>
  <Heading>
    Section Title
  </Heading>

  Section body
</Section>"
`;

exports[`convertSnootyAstToMdast - node snapshots | simple text node 1`] = `"Just text"`;

exports[`convertSnootyAstToMdast - node snapshots | standalone list_item 1`] = `"* Alone item"`;

exports[`convertSnootyAstToMdast - node snapshots | strong 1`] = `"**bold**"`;

exports[`convertSnootyAstToMdast - node snapshots | substitution node 1`] = `"<Reference key="product" type="substitution" />"`;

exports[`convertSnootyAstToMdast - node snapshots | substitution reference 1`] = `"Hello <Reference key="product" type="substitution" />"`;

exports[`convertSnootyAstToMdast - node snapshots | substitution_definition node 1`] = `""`;

exports[`convertSnootyAstToMdast - node snapshots | superscript and subscript 1`] = `"<sup>sup</sup> and <sub>sub</sub>"`;

exports[`convertSnootyAstToMdast - node snapshots | table 1`] = `
"<Table>
  <TableRow>
    <TableCell>
      Cell
    </TableCell>
  </TableRow>
</Table>"
`;

exports[`convertSnootyAstToMdast - node snapshots | table head 1`] = `
"<TableHead>
  <TableRow>
    <TableCell>
      Header
    </TableCell>
  </TableRow>
</TableHead>"
`;

exports[`convertSnootyAstToMdast - node snapshots | tabs container 1`] = `
"<Tabs>
  Tab content
</Tabs>"
`;

exports[`convertSnootyAstToMdast - node snapshots | target node 1`] = `"<span id="my-target" />"`;

exports[`convertSnootyAstToMdast - node snapshots | target_identifier 1`] = `"<span id="ident" />"`;

exports[`convertSnootyAstToMdast - node snapshots | thematic break 1`] = `"<Transition />"`;

exports[`convertSnootyAstToMdast - node snapshots | title node 1`] = `
"<Heading>
  A Title
</Heading>"
`;

exports[`convertSnootyAstToMdast - node snapshots | title reference 1`] = `"*Titled*"`;

exports[`convertSnootyAstToMdast - node snapshots | unknown node type 1`] = `"<!-- unsupported: mystery -->"`;
